[tool.poetry]
name = "loci-looped"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = "^2.3.1"
numpy = "^2.0.0"
opencv-python = "^4.10.0.84"
h5py = "^3.11.0"
pyyaml = "^6.0.1"
pillow = "^10.4.0"
einops = "^0.8.0"
matplotlib = "^3.9.1"
jsmin = "^3.0.1"
pandas = "^2.2.2"
motmetrics = "^1.4.0"
torchvision = "^0.18.1"
scikit-image = "^0.24.0"
lpips = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
